fix for hero on mobile

--- a/wp-content/themes/crtc/css/sass/theme.scss
+++ b/wp-content/themes/crtc/css/sass/theme.scss
@@ -202,6 +202,10 @@ a {
   -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
 
+  iframe {
+  	width: 100%;
+  }
+
 	.container {
 	  @include vertical-align();
 	}
@@ -918,6 +922,18 @@ form.register-form {
 @media (max-width: 767px) {
 	h1, .hero h1, #countdown-to-event > div .h1{
 		font-size: 35px;
+	}
+
+	.hero {
+		padding-top: 40px;
+		padding-bottom: 40px;
+		height: auto;
+		.container {
+			top: auto;
+			-webkit-transform: none;
+		  -ms-transform: none;
+		  transform: none;
+		}
 	}
 
 	#countdown-to-event > div:first-child {
